# digital_mirror

./: .gitignore  CLAUDE.md  DigitalMirror.spec  README.md  RELEASE_NOTES.md  RELEASING.md  build_macos.sh  digital_mirror.py  entitlements.plist  pyproject.toml  requirements.txt
assets/: icon.icns
scripts/: bootstrap.py  create_dmg.py  create_icon.py
